<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:focusable="true"
                android:focusableInTouchMode="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:id="@+id/layoutMain"
                      android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:focusable="true"
                      android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/imvLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:width="50dp"
                android:height="50dp"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/big_space"
                android:background="#000000"
                android:padding="1dp"
                android:visibility="invisible"/>

            <org.droidparts.widget.ClearableEditText
                android:id="@+id/edtCompanyName"
                android:hint="Company Name"
                android:textColorHint="@color/light_gray"
                android:layout_marginTop="@dimen/big_space"
                style="@style/edit_text_name"
                android:visibility="invisible"/>

            <Spinner
                android:id="@+id/spnIndustry"
                android:layout_marginTop="@dimen/big_space"
                android:focusable="true"
                android:textSize="40sp"
                android:prompt="@string/spinner"
                style="@style/edit_text_email"
                android:visibility="invisible"/>

            <org.droidparts.widget.ClearableEditText
                android:id="@+id/edtDescription"
                android:hint="Company Description"
                android:textColorHint="@color/light_gray"
                android:layout_marginTop="@dimen/big_space"
                style="@style/edit_text_multiline"
                android:lines="10"
                android:visibility="invisible"/>

            <org.droidparts.widget.ClearableEditText
                android:id="@+id/edtAddress1"
                android:hint="Address 1"
                android:textColorHint="@color/light_gray"
                android:layout_marginTop="@dimen/big_space"
                style="@style/edit_text_name"
                android:visibility="invisible"/>

            <org.droidparts.widget.ClearableEditText
                android:id="@+id/edtAddress2"
                android:hint="Address 2"
                android:textColorHint="@color/light_gray"
                android:layout_marginTop="@dimen/small_space"
                style="@style/edit_text_name"
                android:visibility="invisible"/>

            <org.droidparts.widget.ClearableEditText
                android:id="@+id/edtZipCode"
                android:hint="Zip Code"
                android:textColorHint="@color/light_gray"
                android:layout_marginTop="@dimen/small_space"
                style="@style/edit_text_zip_code"
                android:visibility="invisible"/>

            <Spinner
                android:id="@+id/spnNeighborhood"
                android:layout_marginTop="@dimen/small_space"
                android:textSize="40sp"
                android:prompt="@string/spinner"
                style="@style/edit_text_email"
                android:visibility="invisible" />

            <org.droidparts.widget.ClearableEditText
                android:id="@+id/edtCompanyPhone"
                android:hint="Company Phone"
                android:textColorHint="@color/light_gray"
                android:layout_marginTop="@dimen/big_space"
                style="@style/edit_text_phone"
                android:visibility="invisible"/>

            <org.droidparts.widget.ClearableEditText
                android:id="@+id/edtWebsite"
                android:hint="Website"
                android:textColorHint="@color/light_gray"
                android:layout_marginTop="@dimen/big_space"
                android:layout_marginBottom="@dimen/big_space"
                style="@style/edit_text_email"
                android:visibility="invisible"/>

        </LinearLayout>

    </ScrollView>

    <com.lyft.android.scissors.CropView
        android:id="@+id/cpvCropper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cropviewViewportOverlayPadding="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/big_space"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <com.gtsoft.meddyl.merchant.system.gtsoft.GTButton
            android:id="@+id/btnCancel"
            android:text="@string/register_logo_button_cancel"
            android:layout_width="0dp"
            android:layout_weight=".40"
            android:layout_marginRight="5dp"
            style="@style/button_white"
            android:visibility="gone"/>

        <com.gtsoft.meddyl.merchant.system.gtsoft.GTButton
            android:id="@+id/btnCropImage"
            android:text="@string/register_logo_button_crop"
            android:layout_width="0dp"
            android:layout_weight=".40"
            android:layout_marginLeft="5dp"
            style="@style/button_blue"
            android:visibility="gone"/>

    </LinearLayout>

</android.support.percent.PercentRelativeLayout>
